--- a/Assets/UIDocuments/TopTabs.uxml
+++ b/Assets/UIDocuments/TopTabs.uxml
@@ -26,6 +26,7 @@
                     <ui:Button text="OOB Editor" name="OOBEditorButton" />
                     <ui:Button text="Scenario State Editor" name="ScenarioStateEditorButton" />
                     <ui:Button text="JS Script Console" name="JSScriptConsoleButton" />
+                    <ui:Button text=" Set to Formation Position" name="SetToFormationPositionButton" />
                 </ui:VisualElement>
             </ui:Tab>
             <ui:Tab label="Preference">
