--- a/Assets/UIDocuments/LaunchedTorpedoEditor.uxml
+++ b/Assets/UIDocuments/LaunchedTorpedoEditor.uxml
@@ -13,79 +13,98 @@
                         <ui:DataBinding property="style.display" binding-mode="ToTarget" source-to-ui-converters="LaunchedTorpedo to DisplayStyle (Not)" />
                     </Bindings>
                 </ui:Label>
-                <ui:VisualElement style="flex-grow: 1;">
-                    <ui:Instance template="GlobalStringEditor" data-source-path="sourceName">
-                        <AttributeOverrides element-name="GlobalStringLabel" text="Name" />
-                    </ui:Instance>
-                    <ui:VisualElement style="flex-grow: 0; flex-direction: row;">
-                        <ui:TextField label="Shooter" readonly="true" style="flex-grow: 1;">
+                <ui:VisualElement style="flex-grow: 1; flex-direction: row;">
+                    <ui:VisualElement style="flex-grow: 1; flex-basis: 100px;">
+                        <ui:Instance template="GlobalStringEditor" data-source-path="sourceName">
+                            <AttributeOverrides element-name="GlobalStringLabel" text="Name" />
+                        </ui:Instance>
+                        <ui:VisualElement style="flex-grow: 0; flex-direction: row;">
+                            <ui:TextField label="Shooter" readonly="true" style="flex-grow: 1;">
+                                <Bindings>
+                                    <ui:DataBinding property="value" data-source-path="shooterDesc" binding-mode="ToTarget" />
+                                </Bindings>
+                            </ui:TextField>
+                        </ui:VisualElement>
+                        <ui:VisualElement style="flex-grow: 0; flex-direction: row;">
+                            <ui:TextField label="Desired Target" readonly="true" style="flex-grow: 1;">
+                                <Bindings>
+                                    <ui:DataBinding property="value" data-source-path="desiredTargetDesc" binding-mode="ToTarget" />
+                                </Bindings>
+                            </ui:TextField>
+                        </ui:VisualElement>
+                        <ui:FloatField label="Length (ft)">
                             <Bindings>
-                                <ui:DataBinding property="value" data-source-path="shooterDesc" binding-mode="ToTarget" />
+                                <ui:DataBinding property="value" data-source-path="lengthFoot" binding-mode="TwoWay" />
                             </Bindings>
-                        </ui:TextField>
-                        <ui:Button text="Set" name="SetShooterButton" />
-                    </ui:VisualElement>
-                    <ui:VisualElement style="flex-grow: 0; flex-direction: row;">
-                        <ui:TextField label="Desired Target" readonly="true" style="flex-grow: 1;">
+                        </ui:FloatField>
+                        <ui:FloatField label="Beam (ft)">
                             <Bindings>
-                                <ui:DataBinding property="value" data-source-path="desiredTargetDesc" binding-mode="ToTarget" />
+                                <ui:DataBinding property="value" data-source-path="beamFoot" binding-mode="TwoWay" />
                             </Bindings>
-                        </ui:TextField>
-                        <ui:Button text="Set" name="SetDesiredTargetButton" />
+                        </ui:FloatField>
+                        <ui:EnumField label="Endgame" value="Center" type="NavalCombatCore.LaunchedTorpedoEndgameType, Assembly-CSharp">
+                            <Bindings>
+                                <ui:DataBinding property="value" data-source-path="endgameType" binding-mode="TwoWay" />
+                            </Bindings>
+                        </ui:EnumField>
+                        <ui:VisualElement style="flex-grow: 0; flex-direction: row;">
+                            <ui:TextField label="Hit" readonly="true" style="flex-grow: 1;">
+                                <Bindings>
+                                    <ui:DataBinding property="value" data-source-path="hitObjectDesc" binding-mode="ToTarget" />
+                                </Bindings>
+                            </ui:TextField>
+                        </ui:VisualElement>
+                        <ui:FloatField label="Inflict DP">
+                            <Bindings>
+                                <ui:DataBinding property="value" data-source-path="inflictDamagePoint" binding-mode="TwoWay" />
+                            </Bindings>
+                        </ui:FloatField>
+                        <Bindings>
+                            <ui:DataBinding property="style.display" binding-mode="ToTarget" source-to-ui-converters="LaunchedTorpedo to DisplayStyle" />
+                        </Bindings>
                     </ui:VisualElement>
-                    <ui:FloatField label="Latitude">
-                        <Bindings>
-                            <ui:DataBinding property="value" data-source-path="position.LatDeg" binding-mode="TwoWay" />
-                        </Bindings>
-                    </ui:FloatField>
-                    <ui:FloatField label="Longtitude">
-                        <Bindings>
-                            <ui:DataBinding property="value" data-source-path="position.LonDeg" binding-mode="TwoWay" />
-                        </Bindings>
-                    </ui:FloatField>
-                    <ui:FloatField label="Speed (kts)">
-                        <Bindings>
-                            <ui:DataBinding property="value" data-source-path="speedKnots" binding-mode="TwoWay" />
-                        </Bindings>
-                    </ui:FloatField>
-                    <ui:FloatField label="Heading (Deg)">
-                        <Bindings>
-                            <ui:DataBinding property="value" data-source-path="headingDeg" binding-mode="TwoWay" />
-                        </Bindings>
-                    </ui:FloatField>
-                    <ui:EnumField label="Map State" value="Center" type="NavalCombatCore.MapState, Assembly-CSharp">
-                        <Bindings>
-                            <ui:DataBinding property="value" data-source-path="mapState" binding-mode="TwoWay" />
-                        </Bindings>
-                    </ui:EnumField>
-                    <ui:FloatField label="Length (ft)">
-                        <Bindings>
-                            <ui:DataBinding property="value" data-source-path="lengthFoot" binding-mode="TwoWay" />
-                        </Bindings>
-                    </ui:FloatField>
-                    <ui:FloatField label="Beam (ft)">
-                        <Bindings>
-                            <ui:DataBinding property="value" data-source-path="beamFoot" binding-mode="TwoWay" />
-                        </Bindings>
-                    </ui:FloatField>
-                    <ui:FloatField label="Max Range (yards)">
-                        <Bindings>
-                            <ui:DataBinding property="value" data-source-path="maxRangeYards" binding-mode="TwoWay" />
-                        </Bindings>
-                    </ui:FloatField>
-                    <ui:FloatField label="Moved Dist (yards)">
-                        <Bindings>
-                            <ui:DataBinding property="value" data-source-path="movedDistanceYards" binding-mode="TwoWay" />
-                        </Bindings>
-                    </ui:FloatField>
-                    <ui:EnumField label="Damage Class" value="Center" type="NavalCombatCore.TorpedoDamageClass, Assembly-CSharp">
-                        <Bindings>
-                            <ui:DataBinding property="value" data-source-path="damageClass" binding-mode="TwoWay" />
-                        </Bindings>
-                    </ui:EnumField>
-                    <Bindings>
-                        <ui:DataBinding property="style.display" binding-mode="ToTarget" source-to-ui-converters="LaunchedTorpedo to DisplayStyle" />
-                    </Bindings>
+                    <ui:VisualElement style="flex-grow: 1; flex-basis: 100px;">
+                        <ui:FloatField label="Latitude">
+                            <Bindings>
+                                <ui:DataBinding property="value" data-source-path="position.LatDeg" binding-mode="TwoWay" />
+                            </Bindings>
+                        </ui:FloatField>
+                        <ui:FloatField label="Longtitude">
+                            <Bindings>
+                                <ui:DataBinding property="value" data-source-path="position.LonDeg" binding-mode="TwoWay" />
+                            </Bindings>
+                        </ui:FloatField>
+                        <ui:FloatField label="Speed (kts)">
+                            <Bindings>
+                                <ui:DataBinding property="value" data-source-path="speedKnots" binding-mode="TwoWay" />
+                            </Bindings>
+                        </ui:FloatField>
+                        <ui:FloatField label="Heading (Deg)">
+                            <Bindings>
+                                <ui:DataBinding property="value" data-source-path="headingDeg" binding-mode="TwoWay" />
+                            </Bindings>
+                        </ui:FloatField>
+                        <ui:EnumField label="Map State" value="Center" type="NavalCombatCore.MapState, Assembly-CSharp">
+                            <Bindings>
+                                <ui:DataBinding property="value" data-source-path="mapState" binding-mode="TwoWay" />
+                            </Bindings>
+                        </ui:EnumField>
+                        <ui:FloatField label="Max Range (yards)">
+                            <Bindings>
+                                <ui:DataBinding property="value" data-source-path="maxRangeYards" binding-mode="TwoWay" />
+                            </Bindings>
+                        </ui:FloatField>
+                        <ui:FloatField label="Moved Dist (yards)">
+                            <Bindings>
+                                <ui:DataBinding property="value" data-source-path="movedDistanceYards" binding-mode="TwoWay" />
+                            </Bindings>
+                        </ui:FloatField>
+                        <ui:EnumField label="Damage Class" value="Center" type="NavalCombatCore.TorpedoDamageClass, Assembly-CSharp">
+                            <Bindings>
+                                <ui:DataBinding property="value" data-source-path="damageClass" binding-mode="TwoWay" />
+                            </Bindings>
+                        </ui:EnumField>
+                    </ui:VisualElement>
                 </ui:VisualElement>
             </ui:VisualElement>
         </ui:VisualElement>
