Switch to streaming asset based mode and add meta info into FullState to drive auto-fetching

--- a/Assets/UIDocuments/StreamingAssetReferenceDialog.uxml
+++ b/Assets/UIDocuments/StreamingAssetReferenceDialog.uxml
@@ -1,5 +1,5 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:VisualElement data-source-type="StreamingAssetReference, Assembly-CSharp" class="panel-dialog" style="flex-grow: 0; height: auto;">
+    <ui:VisualElement data-source-type="ReferenceManager, Assembly-CSharp" data-source-path="streamingAssetReference" class="panel-dialog" style="flex-grow: 0; height: auto;">
         <ui:Label text="Streaming Asset Reference" class="title" />
         <ui:TextField label="Leaders Path">
             <Bindings>
