--- a/Assets/UIDocuments/styles/style.uss
+++ b/Assets/UIDocuments/styles/style.uss
@@ -133,3 +133,11 @@
 .unity-base-popup-field__text {
     margin-right: 5px;
 }
+
+.unity-button.verylarge {
+    padding-top: 6px;
+    padding-bottom: 6px;
+    font-size: 36px;
+    margin-bottom: 2px;
+    margin-top: 2px;
+}
