--- a/Assets/UIDocuments/ScenarioStateEditor.uxml
+++ b/Assets/UIDocuments/ScenarioStateEditor.uxml
@@ -51,6 +51,12 @@
                     <ui:DataBinding property="value" data-source-path="visibility" binding-mode="TwoWay" />
                 </Bindings>
             </ui:EnumField>
+            <ui:Label text="Description" />
+            <ui:TextField multiline="true" vertical-scroller-visibility="Auto" style="white-space: normal; height: 200px;">
+                <Bindings>
+                    <ui:DataBinding property="value" data-source-path="description" binding-mode="TwoWay" />
+                </Bindings>
+            </ui:TextField>
         </ui:VisualElement>
         <ui:VisualElement style="flex-grow: 0; flex-direction: row;">
             <ui:Button text="Import" name="ImportButton" style="flex-basis: 100px; flex-grow: 1;" />
