Add simple UI for shipLog-level UI

--- a/Assets/UIDocuments/ShipLogEditor.uxml
+++ b/Assets/UIDocuments/ShipLogEditor.uxml
@@ -1,5 +1,6 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <ui:Template name="DoctrineEditor" src="project://database/Assets/UIDocuments/DoctrineEditor.uxml?fileID=9197481963319205126&amp;guid=9963f3ab57e9cd545869989ed4b99a3d&amp;type=3#DoctrineEditor" />
+    <ui:Template name="SubStateMultiColumnListView" src="project://database/Assets/UIDocuments/SubStateMultiColumnListView.uxml?fileID=9197481963319205126&amp;guid=24ad9cde11c482e408a031471b51bca7&amp;type=3#SubStateMultiColumnListView" />
     <Style src="project://database/Assets/UIDocuments/styles/style.uss?fileID=7433441132597879392&amp;guid=2bc9a89e260078e449dd456da4bfcf64&amp;type=3#style" />
     <ui:VisualElement name="VisualElement" data-source-type="GameManager, Assembly-CSharp" class="panel" style="flex-grow: 1;">
         <ui:Label text="Ship Logs" class="title" />
@@ -212,24 +213,7 @@
                             </ui:Tab>
                             <ui:Tab label="Damage Effects">
                                 <ui:VisualElement style="flex-grow: 1; flex-direction: row;">
-                                    <ui:VisualElement style="flex-grow: 1; flex-basis: 100px;">
-                                        <ui:MultiColumnListView header-title="General Damage Effects" show-add-remove-footer="true" show-foldout-header="true" name="GeneralDamageEffectMultiColumnListView" data-source-path="damageEffectRecords" binding-source-selection-mode="AutoAssign">
-                                            <ui:Columns>
-                                                <ui:Column width="50%" name="code" title="Code" cell-template="project://database/Assets/UIDocuments/Templates/DamageEffectRecord/DamageEffectRecordCellCode.uxml?fileID=9197481963319205126&amp;guid=ad727d435a5f5a041baf0a61417da417&amp;type=3#DamageEffectRecordCellCode" />
-                                                <ui:Column width="25%" name="severity" title="Severity" cell-template="project://database/Assets/UIDocuments/Templates/DamageEffectRecord/DamageEffectRecordCellSeverity.uxml?fileID=9197481963319205126&amp;guid=e3092b0c6a935e04cbbc5d0c1128ad0a&amp;type=3#DamageEffectRecordCellSeverity" />
-                                                <ui:Column width="25%" name="countdownSeconds" title="Countdown (sec)" cell-template="project://database/Assets/UIDocuments/Templates/DamageEffectRecord/DamageEffectRecordCellCountdownSeconds.uxml?fileID=9197481963319205126&amp;guid=053f663eea200a84186be5fac3fa832f&amp;type=3#DamageEffectRecordCellCountdownSeconds" />
-                                            </ui:Columns>
-                                        </ui:MultiColumnListView>
-                                    </ui:VisualElement>
-                                    <ui:VisualElement style="flex-grow: 1; flex-basis: 100px;">
-                                        <ui:MultiColumnListView header-title="Shipboard Fires" show-add-remove-footer="true" show-foldout-header="true" name="ShipboardFireMultiColumnListView" data-source-path="shipboardFireStatus" binding-source-selection-mode="AutoAssign">
-                                            <ui:Columns>
-                                                <ui:Column width="33%" name="description" title="Description" cell-template="project://database/Assets/UIDocuments/Templates/ShipboardFireStatus/ShipboardFireStatusCellDescription.uxml?fileID=9197481963319205126&amp;guid=6ca1e8ac43a9b994f87c2c28e9829441&amp;type=3#ShipboardFireStatusCellDescription" />
-                                                <ui:Column width="33%" name="severity" title="Severity" cell-template="project://database/Assets/UIDocuments/Templates/ShipboardFireStatus/ShipboardFireStatusCellSeverity.uxml?fileID=9197481963319205126&amp;guid=5dcbd039e343dcd4ea6dbc8cd2dfbbac&amp;type=3#ShipboardFireStatusCellSeverity" />
-                                                <ui:Column width="33%" name="countdownSeconds" title="Countdown (sec)" cell-template="project://database/Assets/UIDocuments/Templates/ShipboardFireStatus/ShipboardFireStatusCellCountdownSeconds.uxml?fileID=9197481963319205126&amp;guid=8f4eb0bd762ab2543bb9394b19f4a0d0&amp;type=3#ShipboardFireStatusCellCountdownSeconds" />
-                                            </ui:Columns>
-                                        </ui:MultiColumnListView>
-                                    </ui:VisualElement>
+                                    <ui:Instance template="SubStateMultiColumnListView" style="flex-grow: 1;" />
                                 </ui:VisualElement>
                             </ui:Tab>
                             <ui:Tab label="Battery">
